dark mode fix

--- a/styles.css
+++ b/styles.css
@@ -330,19 +330,10 @@ h2,h3 {
 }
 .social.fixed {
   background-color: #fff;
-  border-bottom: 1px solid #fff;
 }
 .social path {
   fill:hsl(200, 9%, 59%)
 }
-.screenshots .slick-prev::before, 
-.screenshots .slick-next::before {
-  color:hsl(200, 11%, 35%);
-}
-.screenshots .slick-prev:hover:before, 
-.screenshots .slick-prev:focus:before, 
-.screenshots .slick-next:hover:before, 
-.screenshots .slick-next:focus:before,
 .defaulticon svg:hover path, 
 .defaulticon svg:focus path {
   fill:hsl(200, 14%, 25%);
@@ -438,46 +429,40 @@ blockquote,ol,p,pre,table,ul {
   font-family:gidolinyaregular;
 }
 .dark .social.fixed {
-  background-color: #000;
-  border-bottom: 1px solid black;
+  background-color: hsl(200, 5%, 15%);
+}
+.dark .fixed .socialwrap {
+  box-shadow: 0px 0px 6px 0px rgba(0,0,0,1);
 }
 .dark,
 .dark .social path,
-.dark .screenshots .slick-prev::before, 
-.dark .screenshots .slick-next::before {
-  color:hsl(200, 5%, 65%);
-  fill:hsl(200, 5%, 65%);
-  background-color:#000;
+.dark #navbg {
+  color:hsl(200, 5%, 85%);
+  fill:hsl(200, 5%, 85%);
+  background-color: rgb(36, 39, 40);
 }
 .dark a {
-  color:hsl(200, 100%, 40%);
+  color:hsl(200, 95%, 70%);
 }
-.dark .screenshots .slick-prev:hover:before, 
-.dark .screenshots .slick-prev:focus:before, 
-.dark .screenshots .slick-next:hover:before, 
-.dark .screenshots .slick-next:focus:before,
 .dark .defaulticon svg:hover path, 
 .dark .defaulticon svg:focus path {
-  fill:hsl(200, 50%, 95%);
-  color:hsl(200, 50%, 95%);
+  fill:white;
+  color:white;
 }
 
-.dark h1 {
-  color:hsl(200, 50%, 95%);
-}
-.dark h2, .dark h3 {
-  color:hsl(200, 10%, 77%);
+.dark h1, .dark h2, .dark h3 {
+  color:hsl(200, 95%, 98%);
 }
 .dark .comment, .dark .charmap {
-  color:hsl(200, 14%, 25%)
+  color:hsl(200, 5%, 45%)
 }
 
 .dark .jumbotron:before {
-  background-image:linear-gradient(to top,rgba(0,0,0,1) 0%,rgba(0,0,0,.95) 4%,rgba(0,0,0,.8) 8%,rgba(0,0,0,.5) 12%,rgba(0,0,0,.2) 16%,rgba(0,0,0,.05) 20%,rgba(0,0,0,0) 24%,rgba(0,0,0,0) 100%);
+  background-image:linear-gradient(to top,rgba(36, 39, 40,1) 0%,rgba(36, 39, 40,.95) 4%,rgba(36, 39, 40,.8) 8%,rgba(36, 39, 40,.5) 12%,rgba(36, 39, 40,.2) 16%,rgba(36, 39, 40,.05) 20%,rgba(36, 39, 40,0) 24%,rgba(36, 39, 40,0) 100%);
   
 }
 .dark .jumbotron {
-    background:url(img/bgdark.png) center center/cover no-repeat;
+    background:url(img/darkbg.png) center center/cover no-repeat;
 }
 
 
